# ravn-challenge

./: README.md  pyproject.toml
.github/workflows/: get_data.yml
flows/: bq_uploader.py  data_downloader.py  main.py
